# raptor-rag-langchain

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  code-quality.yml
data/evaluation/: RAG_Quiz_Eng_v2.docx  RAG_Quiz_Eng_with_IDs.json
data/raw/: .gitkeep
notebooks/: .gitkeep  baseline_rag.ipynb  raptor_evaluator.ipynb  raptor_rag.ipynb  raptor_rag_demo.ipynb
src/: __init__.py  ingestion.py  raptor_serve.py  settings.py
src/raptor/: __init__.py  clustering.py  summarization.py  tree_builder.py  tree_structures.py
src/retrieval/: __init__.py  rag_chain.py  vector_store.py
tests/: conftest.py  test_clustering.py  test_tree_structures.py
